Fix flexbox wrap spacing calculation

--- a/src/features/Todo/TodoTask.css
+++ b/src/features/Todo/TodoTask.css
@@ -1,7 +1,7 @@
 .Todo__tasks
 > div {
-    /*                      rowgap    box per row */
-    width: calc((100% - 2rem*4) / 5);
+    /*                  rowgap   borders    box per row */
+    width: calc((100% - 2rem*4 - 2px*5*2) / 5);
     aspect-ratio: 1 / 1;
     text-align: center;
     overflow-y: scroll;
@@ -63,6 +63,7 @@
             color: #ffffff;
             opacity: 1;
             border-radius: 2%;
+            border: 2px dotted rgba(0, 0, 0, 0);
         }
 
         .Todo__tasks-red {
@@ -70,6 +71,7 @@
             color: #000000;
             opacity: 1;
             border-radius: 8%;
+            border: 2px dotted rgba(0, 0, 0, 0);
         }
 
         .Todo__tasks-amber {
@@ -77,6 +79,7 @@
             color: #000000;
             opacity: 0.90;
             border-radius: 10%;
+            border: 2px dotted rgba(0, 0, 0, 0);
         }
 
         .Todo__tasks-green {
@@ -84,6 +87,7 @@
             color: #000000;
             opacity: 0.75;
             border-radius: 12%;
+            border: 2px dotted rgba(0, 0, 0, 0);
         }
 
         .Todo__tasks-transparent {
@@ -91,6 +95,6 @@
             color: #000000;
             opacity: 0.65;
             border-radius: 50%;
-            border: 3px dotted rgba(0, 0, 0, 0.25);
+            border: 2px dotted rgba(0, 0, 0, 0.25);
         }
 
